@@ -1,7 +1,6 @@
 package ru.job4j.collection;
 
 import org.junit.Test;
-import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -10,29 +9,29 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenSortAsc() {
-        List<String> in = Arrays.asList(
+        List<String> in = List.of(
                 "K2", "K2/SK1", "K2/SK1/SSK1",
                 "K2/SK1/SSK2", "K1", "K1/SK1",
                 "K1/SK1/SSK1", "K1/SK1/SSK2",
                 "K1/SK2"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K1", "K1/SK1", "K1/SK1/SSK1",
                 "K1/SK1/SSK2", "K1/SK2", "K2",
                 "K2/SK1", "K2/SK1/SSK1",
@@ -44,13 +43,13 @@ public class DepartmentsTest {
 
     @Test
     public void whenSortDesc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1", "K1/SK1", "K1/SK1/SSK1",
                 "K1/SK1/SSK2", "K1/SK2", "K2",
                 "K2/SK1", "K2/SK1/SSK1",
                 "K2/SK1/SSK2"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2", "K2/SK1", "K2/SK1/SSK1",
                 "K2/SK1/SSK2", "K1", "K1/SK1",
                 "K1/SK1/SSK1", "K1/SK1/SSK2",
@@ -62,12 +61,12 @@ public class DepartmentsTest {
 
     @Test
     public void whenFilledGapsSortedAsc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1/SK1", "K1/SK2", "K1/SK1/SSK1",
                 "K1/SK1/SSK2", "K2", "K2/SK1/SSK1",
                 "K2/SK1/SSK2"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K1", "K1/SK1", "K1/SK1/SSK1",
                 "K1/SK1/SSK2", "K1/SK2", "K2",
                 "K2/SK1", "K2/SK1/SSK1",
@@ -80,12 +79,12 @@ public class DepartmentsTest {
 
     @Test
     public void whenFilledGapsSortedDesc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1/SK1", "K1/SK2", "K1/SK1/SSK1",
                 "K1/SK1/SSK2", "K2", "K2/SK1/SSK1",
                 "K2/SK1/SSK2"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2", "K2/SK1", "K2/SK1/SSK1",
                 "K2/SK1/SSK2", "K1", "K1/SK1",
                 "K1/SK1/SSK1", "K1/SK1/SSK2",
