@@ -1,8 +1,6 @@
 package ru.job4j.collection;
 
 import org.junit.Test;
-
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
@@ -12,12 +10,12 @@ public class NotifyAccountTest {
 
     @Test
     public void whenSentTwoThenTwo() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
@@ -27,13 +25,13 @@ public class NotifyAccountTest {
 
     @Test
     public void whenSentThreeThenTwo() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("113", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("113", "Petr Arsentev", "000001")
                 )
